# aws4

./: .app.json  .clang-tidy  .gdbinit  .gitignore  .lvimrc  CMakeLists.txt  Changelog  README.md  hints.txt  run-dynamodb.sh
cmake/Modules/: AddEJDB2.cmake  AddIOWOW.cmake  AddIWNET.cmake
src/: CMakeLists.txt  aws4.c  aws4.h  aws4dd.c  aws4dd.h  aws4dd_locks.h  aws4dl.c  aws4dl.h  aws4dl_internal.h  config.h.in
src/tests/: CMakeLists.txt  run-dynamodb.sh  test1.c  test2.c
